tests/workflow/negative/implicit_self_loop.s
transition initial -> terminal;
// missing transition initial -> initial;

@initial
init() {
  if (false) {
    terminate();
  };
}
